--- a/indexx.html
+++ b/indexx.html
@@ -16,7 +16,7 @@
         body {
             background-color: #1a1a1a;
             color: #fff;
-            background-image: url('https://i.imgur.com/JQ9pGdW.jpg');
+            background-image: url('https://i.ibb.co/DPZcyq4s/2025-03-28-235535239.png');
             background-size: cover;
             background-attachment: fixed;
             position: relative;
